[gd_scene load_steps=15 format=3 uid="uid://11hmqvhujlrj"]

[ext_resource type="Script" path="res://Scripts/UI/blue_screen.gd" id="1_b0mpi"]
[ext_resource type="Texture2D" uid="uid://boflg803mapg0" path="res://Art/Blue-screen-of-death-1024x576.jpg" id="1_eg8bt"]
[ext_resource type="Texture2D" uid="uid://c52ocu7fnecbu" path="res://Art/Smile.png" id="2_mso42"]
[ext_resource type="Shader" path="res://Shader/Glitch.gdshader" id="3_he46j"]
[ext_resource type="AudioStream" uid="uid://b6tf5vewot5lt" path="res://Audio/Music/VirusMusic.mp3" id="5_vjeu0"]
[ext_resource type="Texture2D" uid="uid://cwrerah6njgfo" path="res://Art/Generic_error_message.png" id="6_7nkmg"]
[ext_resource type="FontFile" uid="uid://bsgkydget2ok" path="res://SegoeUIVF.ttf" id="7_q5bqx"]
[ext_resource type="Texture2D" uid="uid://bkjnok5wkfdke" path="res://Art/Button.png" id="8_o4x7k"]
[ext_resource type="AudioStream" uid="uid://b0wbnca6dxp6y" path="res://Audio/SFX/Windows Critical Error Sounds.mp3" id="9_2imam"]

[sub_resource type="Animation" id="Animation_atbyr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(173, 142)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1n45e"]
resource_name = "Smile"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.03333, 4),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [Vector2(173, 142), Vector2(173, 142), Vector2(175, 162)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.03333, 4),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, 0.0, 3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uys3d"]
_data = {
"RESET": SubResource("Animation_atbyr"),
"Smile": SubResource("Animation_1n45e")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_opvng"]
shader = ExtResource("3_he46j")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uw24a"]
texture = ExtResource("8_o4x7k")
texture_margin_left = 6.0
texture_margin_top = 2.0

[node name="BlueScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0mpi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_eg8bt")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 142.0
offset_right = 367.0
offset_bottom = 410.0
pivot_offset = Vector2(97, 134)
texture = ExtResource("2_mso42")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uys3d")
}
autoplay = "Smile"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_opvng")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 1, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vjeu0")

[node name="Window" type="Window" parent="." groups=["Error_Window"]]
auto_translate_mode = 1
title = "Are you ok"
position = Vector2i(787, 460)
size = Vector2i(345, 160)
visible = false
always_on_top = true

[node name="Camera2D" type="Camera2D" parent="Window"]

[node name="ErrorMessage" type="TextureRect" parent="Window/Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -81.5
offset_right = 176.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_7nkmg")

[node name="ErrorButton" type="Button" parent="Window/Camera2D/ErrorMessage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 109.0
offset_right = 352.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_q5bqx")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/hover = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/normal = SubResource("StyleBoxTexture_uw24a")
text = "Yes"

[node name="ErrorButton2" type="Button" parent="Window/Camera2D/ErrorMessage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 166.06
offset_top = 109.0
offset_right = 270.06
offset_bottom = 164.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_q5bqx")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/hover = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/normal = SubResource("StyleBoxTexture_uw24a")
text = "Yes"

[node name="ErrorLabel" type="Label" parent="Window/Camera2D/ErrorMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.75
offset_top = -16.085
offset_right = 163.25
offset_bottom = 71.915
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_q5bqx")
theme_override_font_sizes/font_size = 14
text = "Are you ok?"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Window"]
stream = ExtResource("9_2imam")
volume_db = 8.0

[node name="Window2" type="Window" parent="." groups=["Error_Window"]]
auto_translate_mode = 1
title = "I ùëéùì∂ ùêßùëúùìâ!"
position = Vector2i(920, 310)
size = Vector2i(345, 160)
visible = false
always_on_top = true

[node name="Camera2D" type="Camera2D" parent="Window2"]

[node name="ErrorMessage" type="TextureRect" parent="Window2/Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -81.5
offset_right = 176.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_7nkmg")

[node name="ErrorButton" type="Button" parent="Window2/Camera2D/ErrorMessage"]
layout_mode = 0
offset_left = 248.0
offset_top = 109.0
offset_right = 352.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_q5bqx")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/hover = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uw24a")
theme_override_styles/normal = SubResource("StyleBoxTexture_uw24a")
text = "Ok
"

[node name="ErrorLabel" type="Label" parent="Window2/Camera2D/ErrorMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.75
offset_top = -16.085
offset_right = 163.25
offset_bottom = 71.915
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_q5bqx")
theme_override_font_sizes/font_size = 14
text = "IÃ∑Õ†ÕÜÃãÃØÃ§Ãó Ã∂ÃëÃ≤Ã¢ÕâÃ§aÃ¥ÃëÃåÕóÕÄÃêÃøÕñÕöÃñmÃ∏ÃëÃΩÃåÕÄÃÜÃÜÕíÃòÃùÃ™Ã¶ÃªÕé ÃµÃæÕÉÕõÃöÃòÕéÃ∞ÕâÕânÃµÕÉÃæÃÄÃéÃæÃàÃ≤ÃºÃóÕâoÃ¥ÕëÕÇÃΩÕ†ÕñtÃ∂ÃèÃêÕëÕÑÕãÕ†ÕãÃ∫Ã≤Ã§ÕçÕîÃù!Ã∏ÕÑÕùÃ´"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Window2"]
stream = ExtResource("9_2imam")
volume_db = 8.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="close_requested" from="Window" to="Window" method="_on_close_requested"]
[connection signal="pressed" from="Window/Camera2D/ErrorMessage/ErrorButton" to="." method="_on_error_button_pressed"]
[connection signal="pressed" from="Window/Camera2D/ErrorMessage/ErrorButton" to="Window" method="_on_error_button_pressed"]
[connection signal="pressed" from="Window/Camera2D/ErrorMessage/ErrorButton2" to="." method="_on_error_button_2_pressed"]
[connection signal="pressed" from="Window/Camera2D/ErrorMessage/ErrorButton2" to="Window" method="_on_error_button_pressed"]
[connection signal="close_requested" from="Window2" to="." method="_on_window_2_close_requested"]
[connection signal="close_requested" from="Window2" to="Window2" method="_on_close_requested"]
[connection signal="pressed" from="Window2/Camera2D/ErrorMessage/ErrorButton" to="Window2" method="_on_error_button_pressed"]
